--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,7 +6,7 @@ body {
 }
 
 .wrapper {
-  background: #588B8B;
+  background-color: #588B8B;
   width: 92%;
   max-width: 900px;
   margin: 0 auto;
@@ -62,4 +62,23 @@ ul {
 img {
   max-width: 100%;
   height: auto;
+}
+
+header {
+  background-image: url(../images/double-bubble-outline.png);
+  border-bottom: .2em solid #EFD0CA;
+}
+
+footer.wrapper {
+  text-align: center;
+  border-top: .1em solid #EFD0CA;
+  font-size: 75%;
+  padding-top: 2em;
+  padding-bottom: 1.5em;
+  line-height: 1.4sem;
+}
+@media screen and (max-width: 900px) {
+  div.image {
+    display: none; 
+  }
 }
